--- a/app/templates/register.jinja
+++ b/app/templates/register.jinja
@@ -1,5 +1,27 @@
 {% extends "base.jinja"%}
 
 {% block content %}
+<form action="" method="post">
     <h3>Register Page</h3>
+    {{ form.hidden_tag() }}
+    <p>
+        {{ form.username.label }}<br>
+        {{ form.username(size=32) }}
+    </p>
+    <p>
+        {{ form.email.label }}<br>
+        {{ form.email(size=32) }}
+        {% for error in form.email.errors %}
+        <span class="err-msg">{{ error }}</span>
+        {% endfor %}
+    </p>
+    <p>
+        {{ form.password.label }}<br>
+        {{ form.password(size=32) }}
+        {% for error in form.password.errors %}
+        <span class="err-msg">{{ error }}</span>
+        {% endfor %}
+    </p>
+    <p>{{ form.submit() }}</p>
+    </form>
 {% endblock content %}
