--- a/app/templates/base.jinja
+++ b/app/templates/base.jinja
@@ -11,18 +11,24 @@
     {% else %}
     <title>Bay Area Food</title>
     {% endif %}
+
 </head>
-<body>
+<body class="container">
 {% include "navbar.jinja" %}
-{% with messages = get_flashed_messages() %}
+{% with messages = get_flashed_messages(with_categories=true) %}
 {% if messages %}
 <ul>
-{% for message in messages %}
-<li>{{ message }}</li>
+{% for category, message in messages %}
+    <li class="alert alert-{{ category }} alert-dismissible fade show" role="alert">{{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </li>
 {% endfor %}
 </ul>
 {% endif %}
 {% endwith %}
+{% if current_user.is_authenicated %}
+    <h3>Welcome {{ current_user.username }}</h3>
+{% endif %}
     <h1>bayareafood</h1>
     {% block content %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
