--- a/app/templates/navbar.jinja
+++ b/app/templates/navbar.jinja
@@ -18,6 +18,9 @@
           <li class="nav-item">
           <a class="nav-link" href="{{ url_for('auth.signin') }}">Sign In</a>
         </li>
+           <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('social.post') }}">Post</a>
+        </li>
       </ul>
     </div>
   </div>
