--- a/app/templates/signin.jinja
+++ b/app/templates/signin.jinja
@@ -1,5 +1,21 @@
 {% extends "base.jinja"%}
 
 {% block content %}
-    <h3>Signin Page</h3>
+<form action="" method="post">
+    <h3>Signin Page</h3>    
+    {{ form.hidden_tag() }}
+    <p>
+        {{ form.username.label }}<br>
+        {{ form.username(size=32) }}
+    </p>
+  
+    <p>
+        {{ form.password.label }}<br>
+        {{ form.password(size=32) }}
+        {% for error in form.password.errors %}
+            <span class="err-msg">{{ error }}</span>
+        {% endfor %}
+    </p>
+    <p>{{ form.submit() }}</p>
+    </form>
 {% endblock content %}
