--- a/app/templates/base.jinja
+++ b/app/templates/base.jinja
@@ -26,11 +26,13 @@
 </ul>
 {% endif %}
 {% endwith %}
-{% if current_user.is_authenicated %}
+<h1>bayareafood</h1>
+{% if current_user.is_authenticated %}
     <h3>Welcome {{ current_user.username }}</h3>
+{% include './includes/user_search.jinja' %}
 {% endif %}
-    <h1>bayareafood</h1>
-    {% block content %}{% endblock %}
+    
+{% block content %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>  
