--- a/app/templates/navbar.jinja
+++ b/app/templates/navbar.jinja
@@ -12,15 +12,23 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
         </li>
+        {% if not current_user.is_authenticated %}
+         <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.signin') }}">Sign In</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth.signin') }}">Sign In</a>
+         {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('social.user_page', username=current_user.username) }}">My Page</a>
         </li>
            <li class="nav-item">
           <a class="nav-link" href="{{ url_for('social.post') }}">Post</a>
         </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+        </li>
+        {% endif %}
       </ul>
     </div>
   </div>
