--- a/app/templates/post.jinja
+++ b/app/templates/post.jinja
@@ -1,8 +1,8 @@
 {% extends "base.jinja" %}
 
 {% block content %}
-    <h2>Post</h2>
-<form action="" method="post" novalidate>
+<h2>Post</h2>
+<form action="" method="post">
     {{ form.hidden_tag() }}
     <p>
         {{ form.body.label }}<br>
